# Claude-Desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.cz.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  VOICE_FEATURES_DESIGN.md  codecov.yml  package.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: build.yml  ci.yml  coverage.yml  performance.yml  release.yml
docs/: API.cz.md  API.md  DEVELOPMENT.cz.md  DEVELOPMENT.md  README.md  TESTING.cz.md  TESTING.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: auth.rs  auth_tests.rs  debug.rs  error.rs  lib.rs  main.rs  mocks.rs  state.rs  system.rs  voice.rs  voice_tests.rs
src-tauri/src/mcp/: config.rs  launcher.rs  mod.rs  tests.rs
src/js/: app.js  voice.js
src/styles/: main.css
