[package]
name = "claude-desktop"
version = "0.3.0"
description = "Claude Desktop for Linux - Lightweight Tauri implementation with voice features"
authors = ["milhy545"]
license = "MIT"
repository = "https://github.com/milhy545/Claude-Desktop"
edition = "2021"

# Tauri needs a lib for build
[lib]
name = "claude_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"

# Config parsing
toml = "0.8"

# Logging and debugging
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.17"
anyhow = "1.0.100"
async-trait = "0.1.89"

[features]
# Povolit všechny Tauri API features
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"     # Optimalizace pro velikost
strip = true        # Odstranit debug symboly
